--- a/Source/Common/Projects/NTDirectX/Planets.cls
+++ b/Source/Common/Projects/NTDirectX/Planets.cls
@@ -47,7 +47,7 @@ Public Sub Add(ByRef Anything As Planet, Optional Key, Optional Before, Optional
 Add a item to the collection, accepts anything.  Optional Key value to identify by, must not be numerical only.  Before or After are to specify a index or key in the collection at which the new item will be in added at in relation.
 Attribute Add.VB_Description = "Add a item to the collection, accepts anything.  Optional Key value to identify by, must not be numerical only.  Before or After are to specify a index or key in the collection at which the new item will be in added at in relation."
     this.Add Anything, Key, Before, After
-    'If Not Anything Is Nothing Then Set Anything.Parent = pParent
+    If Not Anything Is Nothing Then Set Anything.Parent = pParent
 End Sub
 
 Public Sub Remove(Optional KeyOrIndex) ' _
